java 11, version bumps, docs plugin